Додано секцію Чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -49,8 +49,14 @@
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
-            
-        
+        </div>
+        <div>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./images/box 1.jpg" alt="Фото монитора с работающим программистом" width="370"></li>
+                <li><img src="./images/box 2.jpg" alt="Фото телефона в руке и на мониторе" width="370"></li>
+                <li><img src="./images/box 3.jpg" alt="Фото планшета с цветовой гаммой" width="370"></li>
+            </ul>
         </div>
     </main>
 </body>
