--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
                 <li><img src="./images/box 3.jpg" alt="Фото планшета с цветовой гаммой" width="370"></li>
             </ul>
         </div>
+        <div>
+            <h2>Наша команда</h2>
+            <ul>
+                <li><img src="./imges/img-1.jpg" alt="Фото Игоря Демьяненко" width="270"></li>
+                <li><img src="./imges/img-2.jpg" alt="Фото Ольги Репиной" width="270"></li>
+                <li><img src="./imges/img-3.jpg" alt="Фото Николая Тарасова" width="270"></li>
+                <li><img src="./imges/img-4.jpg" alt="Фото Михаила Ермакова" width="270"></li>
+            </ul>
+        </div>
     </main>
 </body>
 </html>
