--- a/index.html
+++ b/index.html
@@ -68,5 +68,21 @@
             </ul>
         </div>
     </main>
+    <footer>
+        <h3>WebStudio</h3>
+        <address>
+            <ul>
+                <li>
+                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                </li>
+                <li>
+                    <p>info@example.com</p>
+                </li>
+                <li>
+                    <p>+38 099 111 11 11</p>
+                </li>
+            </ul>
+        </address>
+    </footer>
 </body>
 </html>
