--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h3>WebStudio</h3>
+        <a href="">
+            <img src="./images/WebStudio.jpg" alt="WebStudio" />
+        </a>
         <nav>
             <ul>
                 <li><a href="">Студия</a></li>
